@@ -4,7 +4,6 @@ import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.List;
 import java.util.Objects;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
@@ -21,11 +20,28 @@ public class CtrlerInventory {
 	private String state = "Main";
 	private InventoryItem searchResult;
 
+	private final Consumer<InventoryItem> setTxtFields = item -> {
+		view.setTxtName(item.getName());
+		view.setTxtQuantity(String.valueOf(item.getQuantity()));
+		view.setTxtPrice(String.valueOf(item.getPrice()));
+	};
+
+	// Simplified helper methods for above
+
 	public CtrlerInventory(InventoryView view, InventoryDataAccess model) {
 		this.view = view;
 		this.model = model;
 
-		view.newTable(new ArrayList<>(model.getInventoryList()));
+		// Initializes table with pulled data from loaded database
+		view.newTable(
+				new ArrayList<>(model.getInventoryList()), 
+				item -> new Object[]{
+						item.getID(),
+						item.getName(),
+						item.getQuantity(),
+						item.getDisplayPrice()
+				}
+				);
 
 		// "Delete" Button listener
 		view.getBtnDelete().addActionListener(new ActionListener() {
@@ -33,7 +49,6 @@ public class CtrlerInventory {
 			public void actionPerformed(ActionEvent e) {
 				// Immediately switch everything BUT the ID field OFF for editing
 				view.setState(InventoryView.InventoryState.ID_ON);
-
 				// Update the state to be Delete 1 & display the next phase of the inquiry
 				state = "D1";
 				view.swapSouthPanel();
@@ -46,7 +61,6 @@ public class CtrlerInventory {
 			public void actionPerformed(ActionEvent e) {
 				// Immediately switch everything BUT the ID field OFF for editing
 				view.setState(InventoryView.InventoryState.ID_ON);
-
 				// Update the state to be Update 1 & display the next phase of the inquiry
 				state = "U1";
 				view.swapSouthPanel();
@@ -76,21 +90,20 @@ public class CtrlerInventory {
 				} else {
 					view.clearDetailFields();
 				}
-
 				switch (state) {
-				case "U2":
-					state = "U1";
-					view.setState(InventoryView.InventoryState.ID_ON);
-					break;
-				case "D2":
-					state = "D1";
-					view.setState(InventoryView.InventoryState.ID_ON);
-					break;
-				default:
-					state = "Main";
-					view.setState(InventoryView.InventoryState.DISABLE);
-					view.swapSouthPanel();
-					break;
+					case "U2":
+						state = "U1";
+						view.setState(InventoryView.InventoryState.ID_ON);
+						break;
+					case "D2":
+						state = "D1";
+						view.setState(InventoryView.InventoryState.ID_ON);
+						break;
+					default:
+						state = "Main";
+						view.setState(InventoryView.InventoryState.DISABLE);
+						view.swapSouthPanel();
+						break;
 				}
 			}
 		});
@@ -98,6 +111,13 @@ public class CtrlerInventory {
 		// "Clear" Button listener
 		view.getBtnClear().addActionListener(new ActionListener() {
 			@Override
+			public void actionPerformed(ActionEvent e) {
+				view.clearEditibleFields();
+			}
+		});
+
+		// "Clear" Button listener
+		view.getBtnClear().addActionListener(new ActionListener() {
 			public void actionPerformed(ActionEvent e) {
 				view.clearEditibleFields();
 			}
@@ -115,34 +135,37 @@ public class CtrlerInventory {
 				boolean stateChange = false;
 
 				if (isPhase1()) {
+
 					/**
 					 * Phase 1: Process ID lookup for Update or Delete
 					 */
 					searchResult = searchInventory();
+
 					if (searchResult != null) {
 						setTxtFields.accept(searchResult);
 
 						switch (state.charAt(0)) {
-						case 'U':
-							view.setState(InventoryView.InventoryState.ID_OFF);
-							state = "U2"; // Transition to Update phase 2
-							break;
-						case 'D':
-							view.setState(InventoryView.InventoryState.DELETE);
-							state = "D2"; // Transition to Delete phase 2
-							break;
+							case 'U':
+								view.setState(InventoryView.InventoryState.ID_OFF);
+								state = "U2"; // Transition to Update phase 2
+								break;
 
-						/**
-						 * Under NO circumstance should this be called during runtime. If it does, I
-						 * screwed up in the code in this segment
-						 */
-						default:
-							view.failedEntry("Missing State", List.of("state: " + state));
-							break;
+							case 'D':
+								view.setState(InventoryView.InventoryState.DELETE);
+								state = "D2"; // Transition to Delete phase 2
+								break;
+
+								/**
+								 * Under NO circumstance should this be called during runtime. If it does, I
+								 * screwed up in the code in this segment
+								 */
+							default:
+								view.failedEntry("Missing State", new ArrayList<>(Arrays.asList("state: " + state)));
+								break;
 						}
 					} else {
 						// 1. Call Failed Entry error
-						view.failedEntry("Integer DNE", List.of("ID"));
+						view.failedEntry("Integer DNE", new ArrayList<>(Arrays.asList("ID")));
 
 						// 2. Does not change existing state string
 
@@ -152,43 +175,64 @@ public class CtrlerInventory {
 						view.setState(InventoryView.InventoryState.ID_ON);
 					}
 				} else {
+
 					/**
 					 * Operation Phase (A, U2, D2): Properly execute the operation desired
 					 */
 					switch (state.charAt(0)) {
-					case 'A':
-						stateChange = addExecution();
-						break;
-					case 'U':
-						stateChange = updateExecution();
-						break;
-					case 'D':
-						stateChange = deleteExecution();
-						break;
+						case 'A':
+							stateChange = addExecution();
+							break;					
+						case 'U':
+							stateChange = updateExecution();
+							break;						
+						case 'D':
+							stateChange = deleteExecution();
+							break;
 
-					/**
-					 * Under NO circumstance should this be called during runtime. If it does, I
-					 * screwed up in the code in this segment
-					 */
-					default:
-						// 1. Call Failed Entry error
-						view.failedEntry("Missing State", List.of("state: " + state));
+							/**
+							 * Under NO circumstance should this be called during runtime. If it does, I
+							 * screwed up in the code in this segment
+							 */
+						default:
+							// 1. Call Failed Entry error
+							view.failedEntry("Missing State", new ArrayList<>(Arrays.asList("state: " + state)));
 
-						// 2. Does not change existing state string
+							// 2. Does not change existing state string
 
-						// 3. Does not change stateChange to true
+							// 3. Does not change stateChange to true
 
-						// 4. Re-enable ID field for field correction or back to previous scene
-						view.setState(InventoryView.InventoryState.ID_OFF);
-						break;
+							// 4. Re-enable ID field for field correction or back to previous scene
+							view.setState(InventoryView.InventoryState.ID_OFF);
+							break;
 					}
 
 					// Conditional scene switch if CRUD operation is a success
 					if (stateChange) {
 						view.successEntry();
 						state = "Main";
-						view.newTable(model.getInventoryList());
+						view.newTable(
+								model.getInventoryList(),
+								item -> new Object[]{
+										item.getID(),
+										item.getName(),
+										item.getQuantity(),
+										item.getDisplayPrice()
+								}
+								);
 						view.swapSouthPanel();
+					} else {						
+						/**
+						 * Operation Phase (A or U2): Reopen previously closed fields used in operation
+						 */
+						switch (state.charAt(0)) {
+							case 'A':
+								view.setState(InventoryView.InventoryState.ID_OFF);
+								break;							
+							case 'U':
+								view.setState(InventoryView.InventoryState.ID_OFF);
+								break;
+						}
 					}
 				}
 			}
@@ -198,14 +242,46 @@ public class CtrlerInventory {
 	// Simplified helper methods for above
 
 	/**
-	 * Public method combining validation and search
-	 *
-	 * @return Found item or null if invalid/not found
+	 * Final operation in Controller side before Model takes over Creation protocol. Has to verify
+	 * the new input information from the user (name, quantity, price) before sending it off to
+	 * the model for database operation testing.
+	 * 
+	 * @return {@code true} or {@code false} depending on success/failure of operation
 	 */
-	public InventoryItem searchInventory() {
-		Integer existingID = validateInt(view.getTxtID().getText(), "ID", false);
-		searchResult = findID(existingID);
-		return (searchResult instanceof InventoryItem) ? searchResult : null;
+	private boolean addExecution() {
+		// Assigns all fields with validation - if necessary
+		ArrayList<Supplier<Object>> fieldValidators = new ArrayList<>(Arrays.asList(
+				() -> validateString(view.getTxtName().getText(), "Name", false),
+				() -> validateInt(view.getTxtQuantity().getText(), "Quantity", false),
+				() -> validateDouble(view.getTxtPrice().getText(), false)));
+
+		// Will automatically iterate through the list to search for anything that is null
+		ArrayList<Object> results = fieldValidators.stream()
+				.map(Supplier::get)
+				.collect(Collectors.toCollection(ArrayList::new));
+
+		// Searches results to see if anything retains null, indicating a failed field
+		if (results.stream().anyMatch(Objects::isNull)) {
+			return false;
+
+		} else {
+			String name = (String) results.get(0);
+			int quantity = (Integer) results.get(1);
+			double price = (Double) results.get(2);
+
+			return model.addItem(new InventoryItem(name, quantity, price));
+		}
+	}
+
+	private boolean deleteExecution() {
+		// Quickly converts ID text into integer before removing everything
+		String txtId = view.getTxtID().getText();
+		int id = Integer.parseInt(txtId);
+
+		// Method already attempts to remove if the whole item is found in the inventory
+		// system
+		model.deleteItem(findID(id));
+		return true;
 	}
 
 	/**
@@ -221,49 +297,19 @@ public class CtrlerInventory {
 		return (searchResult instanceof InventoryItem) ? searchResult : null;
 	}
 
-	/**
-	 * Assesses the current state by checking the state's string length & 2nd character return
-	 * 
-	 * @return {@code true} if it's "U1" or "D1", or {@code false} under any other circumstance
-	 */
 	private boolean isPhase1() {
 		return (state.length() == 2) && (state.charAt(1) == '1');
 	}
 
-	private final Consumer<InventoryItem> setTxtFields = item -> {
-		view.setTxtName(item.getName());
-		view.setTxtQuantity(String.valueOf(item.getQuantity()));
-		view.setTxtPrice(String.valueOf(item.getPrice()));
-	};
-
 	/**
-	 * Final operation in Controller side before Model takes over Creation protocol. Has to verify
-	 * the new input information from the user (name, quantity, price) before sending it off to
-	 * the model for database operation testing.
-	 * 
-	 * @return {@code true} or {@code false} depending on success/failure of operation
+	 * Public method combining validation and search
+	 *
+	 * @return Found item or null if invalid/not found
 	 */
-	private boolean addExecution() {
-		// Assigns all fields with validation - if necessary
-		List<Supplier<Object>> fieldValidators = Arrays.asList(
-				() -> validateString(view.getTxtName().getText(), "Name", false),
-				() -> validateInt(view.getTxtQuantity().getText(), "Quantity", false),
-				() -> validateDouble(view.getTxtPrice().getText(), false));
-
-		// Will automatically iterate through the list to search for anything that is null
-		List<Object> results = fieldValidators.stream().map(Supplier::get).collect(Collectors.toList());
-
-		// Searches results to see if anything retains null, indicating a failed field
-		if (results.stream().anyMatch(Objects::isNull)) {
-			return false;
-
-		} else {
-			String name = (String) results.get(0);
-			int quantity = (Integer) results.get(1);
-			double price = (Double) results.get(2);
-
-			return model.addItem(new InventoryItem(name, quantity, price));
-		}
+	public InventoryItem searchInventory() {
+		Integer existingID = validateInt(view.getTxtID().getText(), "ID", false);
+		searchResult = findID(existingID);
+		return (searchResult instanceof InventoryItem) ? searchResult : null;
 	}
 
 	/**
@@ -274,64 +320,20 @@ public class CtrlerInventory {
 	 * @return {@code true} or {@code false} depending on success/failure of operation
 	 */
 	private boolean updateExecution() {
-		List<Supplier<Object>> fieldValidators = Arrays.asList(
+		ArrayList<Supplier<Object>> fieldValidators = new ArrayList<>(Arrays.asList(
 				() -> validateString(view.getTxtName().getText(), "Name", true),
 				() -> validateInt(view.getTxtQuantity().getText(), "Quantity", true),
-				() -> validateDouble(view.getTxtPrice().getText(), true));
+				() -> validateDouble(view.getTxtPrice().getText(), true)));
 
-		List<Object> results = fieldValidators.stream().map(Supplier::get).collect(Collectors.toList());
+		ArrayList<Object> results = fieldValidators.stream()
+				.map(Supplier::get)
+				.collect(Collectors.toCollection(ArrayList::new));
 
 		String updatedName = (results.get(0) != "") ? (String) results.get(0) : searchResult.getName();
 		int updatedQuantity = (results.get(1) != null) ? (Integer) results.get(1) : searchResult.getQuantity();
 		double updatedPrice = (results.get(2) != null) ? (Double) results.get(2) : searchResult.getPrice();
 
 		return model.updateItem(new InventoryItem(searchResult.getID(), updatedName, updatedQuantity, updatedPrice));
-	}
-
-	/**
-	 * Final operation in Controller side before Model takes over deletion protocol
-	 * 
-	 * @return {@code true} or {@code false} depending on success/failure of operation
-	 */
-	private boolean deleteExecution() {
-		// Quickly converts ID text into integer before removing everything
-		String txtId = view.getTxtID().getText();
-		int id = Integer.parseInt(txtId);
-
-		return model.deleteItem(findID(id));
-	}
-
-	/**
-	 * Validates Integer input from text field
-	 *
-	 * @return Validated Integer or null if invalid
-	 */
-	private Integer validateInt(String input, String fieldName, boolean isUpdate) {
-		input = validateString(input, fieldName, isUpdate);
-		// Terminates due to empty field without repeatedly mentioning field is empty
-		if (input.isBlank()) {
-			return null;
-
-		} else {
-			try {
-				int value = Integer.parseInt(input);
-				if (value > -1) {
-					return value;
-				} else {
-					// Silently converts if we're in the update state
-					if (!isUpdate) {
-						view.failedEntry("Integer Domain Violation", List.of(fieldName));
-					}
-					return null;
-				}
-			} catch (NumberFormatException e) {
-				// Silently converts if we're in the update state
-				if (!isUpdate) {
-					view.failedEntry("Not An Integer", List.of(fieldName));
-				}
-				return null;
-			}
-		}
 	}
 
 	/**
@@ -353,14 +355,46 @@ public class CtrlerInventory {
 				} else {
 					// Silently converts if we're in the update state
 					if (!isUpdate) {
-						view.failedEntry("Double Domain Violation", List.of("Price"));
+						view.failedEntry("Double Domain Violation", new ArrayList<>(Arrays.asList(("Price"))));
 					}
 					return null;
 				}
 			} catch (NumberFormatException e) {
 				// Silently converts if we're in the update state
 				if (!isUpdate) {
-					view.failedEntry("Not A Double", List.of("Price"));
+					view.failedEntry("Not A Double", new ArrayList<>(Arrays.asList(("Price"))));
+				}
+				return null;
+			}
+		}
+	}
+
+	/**
+	 * Validates Integer input from text field
+	 *
+	 * @return Validated Integer or null if invalid
+	 */
+	private Integer validateInt(String input, String fieldName, boolean isUpdate) {
+		input = validateString(input, fieldName, isUpdate);
+		// Terminates due to empty field without repeatedly mentioning field is empty
+		if (input.isBlank()) {
+			return null;
+		} else {
+			try {
+				int value = Integer.parseInt(input);
+				if (value > -1) {
+					return value;
+				} else {
+					// Silently converts if we're in the update state
+					if (!isUpdate) {
+						view.failedEntry("Integer Domain Violation", new ArrayList<>(Arrays.asList((fieldName))));
+					}
+					return null;
+				}
+			} catch (NumberFormatException e) {
+				// Silently converts if we're in the update state
+				if (!isUpdate) {
+					view.failedEntry("Not An Integer", new ArrayList<>(Arrays.asList((fieldName))));
 				}
 				return null;
 			}
@@ -381,7 +415,7 @@ public class CtrlerInventory {
 			return input.trim();
 		} else {
 			if (!isUpdate) {
-				view.failedEntry("Field left Blank", List.of(fieldName));
+				view.failedEntry("Empty Field", new ArrayList<>(Arrays.asList((fieldName))));
 			}
 			return "";
 		}
