@@ -8,7 +8,9 @@ import java.awt.event.KeyEvent;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.function.Function;
 
 import javax.swing.BorderFactory;
 import javax.swing.Box;
@@ -22,8 +24,6 @@ import javax.swing.JScrollPane;
 import javax.swing.JTable;
 import javax.swing.JTextField;
 import javax.swing.table.DefaultTableModel;
-
-import model.InventoryItem;
 
 public class InventoryView extends JFrame {
 	/**
@@ -49,9 +49,9 @@ public class InventoryView extends JFrame {
 	private boolean isMainPanel;
 	
 	// Individual, iterable lists for specific field groups
-	private List<JTextField> allFields, detailFields;
-	private List<JButton> opButtons, confirmButtons;
-	private List<JLabel> labels;
+	private ArrayList<JTextField> allFields, detailFields;
+	private ArrayList<JButton> opButtons, confirmButtons;
+	private ArrayList<JLabel> labels;
 	
 	public enum InventoryState {
 		ID_ON,
@@ -180,15 +180,15 @@ public class InventoryView extends JFrame {
 	/**
 	 * @return the ALL_FIELDS
 	 */
-	public List<JTextField> getAllFields() {
+	public ArrayList<JTextField> getAllFields() {
 		return allFields;
 	}
 
 	/**
 	 * @return the DETAIL_FIELDS
 	 */
-	public List<JTextField> getDetailFields() {
-		return detailFields;
+	public ArrayList<JTextField> getDetailFields() {
+	    return detailFields;
 	}
 	
 	public void setCloseHandler(Runnable handler) {
@@ -240,8 +240,8 @@ public class InventoryView extends JFrame {
 		btnUpdate = new JButton("Update");
 		btnAdd = new JButton("Add");
 				
-		// List Initialization for these buttons to be group referenced at any time
-		opButtons = List.of(btnDelete, btnUpdate, btnAdd);
+		// ArrayList Initialization for these buttons to be group referenced at any time
+		opButtons = new ArrayList<>(Arrays.asList(btnDelete, btnUpdate, btnAdd));
 		
 		opButtons.forEach(button -> opPanel.add(button));
 		southPanel = new JPanel();
@@ -275,12 +275,11 @@ public class InventoryView extends JFrame {
 			}
 		};
 		
-		// Dedicated List initialization
-		labels = List.of(lblID, lblName, lblQuantity, lblPrice);
-		allFields = List.of(txtID, txtName, txtQuantity, txtPrice);
-		detailFields = allFields.stream()
-				.filter(field -> field != txtID)
-				.toList();
+		// Dedicated ArrayList initialization
+		labels = new ArrayList<>(Arrays.asList(lblID, lblName, lblQuantity, lblPrice));
+		allFields = new ArrayList<>(Arrays.asList(txtID, txtName, txtQuantity, txtPrice));
+		detailFields = new ArrayList<>(allFields);
+		detailFields.remove(txtID);
 		
 		// Attaches button listener across all text fields
 		for (JTextField field : allFields) {
@@ -307,7 +306,7 @@ public class InventoryView extends JFrame {
 		JPanel btnsPanel = new JPanel();
 
 		// Declares all Confirmation Buttons
-		confirmButtons = List.of(btnBack, btnClear, btnSubmit);
+		confirmButtons = new ArrayList<>(Arrays.asList(btnBack, btnClear, btnSubmit));
 		confirmButtons.forEach(obj -> btnsPanel.add(obj));
 		
 		confirmPanel.add(fieldsPanel);
@@ -332,25 +331,20 @@ public class InventoryView extends JFrame {
 	};
 	
 	/**
-	 * Generates a new table, erasing any previous table that may or may not exist
-	 * @param items
+	 * Generates a new table using a generic data extraction approach
+	 * @param items List of items of any type
+	 * @param rowMapper Function to convert items to table row data
 	 */
-	public void newTable(ArrayList<InventoryItem> items) {
-		// Clears the existing table of all its data, if there is any
-		if (tableModel.getRowCount() != 0) {
-			tableModel.setRowCount(0);
-		}
-		
-		// Begins writing from the beginning all existing data
-		for (InventoryItem item : items) {
-			Object[] row = {
-					item.getID(),
-					item.getName(),
-					item.getQuantity(),
-					item.getDisplayPrice()
-			};
-			tableModel.addRow(row);
-		}
+	public <T> void newTable(ArrayList<T> items, Function<T, Object[]> rowMapper) {
+	    // Clear existing table data
+	    if (tableModel.getRowCount() > 0) {
+	        tableModel.setRowCount(0);
+	    }
+	    
+	    // Populate table using the mapper function
+	    for (T item : items) {
+	        tableModel.addRow(rowMapper.apply(item));
+	    }
 	}
 	
 	/**
@@ -447,13 +441,13 @@ public class InventoryView extends JFrame {
 	 * @param testedFields A list of strings for all tested field(s)
 	 * @returns Error Message
 	 */
-	public void failedEntry(String failType, List<String> testedFields) {
+	public void failedEntry(String failType, ArrayList<String> testedFields) {
 		switch (failType) {
 		
 			// By far the most-likely and widely applicable error that can take place
-		case "Blank": 
+		case "Empty Field": 
 			JOptionPane.showMessageDialog(null,
-					"Missing: " + String.join(", ", testedFields),
+					"Empty Field Detected: " + String.join(", ", testedFields),
 					"Error", JOptionPane.ERROR_MESSAGE);
 			break;
 
